[metadata]
name = flask_dtable
url = https://github.com/Flory-1/flask_dtable
download_url = https://github.com/Flory-1/flask_dtable/archive/v_100.tar.gz
author = Florian Lämmlein
author_email = florian.leammlein@gmail.com
description = Creates and returns an HTML table
description-file = README.md
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src